--- a/index.html
+++ b/index.html
@@ -1,25 +1,20 @@
-작성정보 확인
-< kimcharliestudio >('https://www.instagram.com/kimcharlie_studio'이하 'kimcharliestudio')은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.
-○ 이 개인정보처리방침은 2022년 1월 1부터 적용됩니다.
 
-제1조(개인정보의 처리 목적)  < kimcharliestudio >('https://www.instagram.com/kimcharlie_studio'이하 'kimcharliestudio')은(는) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.
-* 		1. 홈페이지 회원가입 및 관리 회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 서비스 부정이용 방지 목적으로 개인정보를 처리합니다. 
-* 		2. 재화 또는 서비스 제공 서비스 제공, 맞춤서비스 제공을 목적으로 개인정보를 처리합니다. 
-* 		3. 마케팅 및 광고에의 활용 신규 서비스(제품) 개발 및 맞춤 서비스 제공, 이벤트 및 광고성 정보 제공 및 참여기회 제공 등을 목적으로 개인정보를 처리합니다. 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>개인정보 처리방침</title>
+</head>
+<body>
+<section id="wrap_pop" class="small_pop">
+	<article class="cont">
+		 <p class="ls2 lh6 bs5 ts4"><em class="emphasis">< kimcharliestudio >('https://www.instagram.com/kimcharlie_studio'이하 'kimcharliestudio')</em>은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.</p><p class="ls2">○ 이 개인정보처리방침은 <em class="emphasis">2022</em>년 <em class="emphasis">1</em>월 <em class="emphasis">1</em>부터 적용됩니다.</p></br><p class='lh6 bs4'><strong>제1조(개인정보의 처리 목적)<br/><br/><em class="emphasis">< kimcharliestudio >('https://www.instagram.com/kimcharlie_studio'이하  'kimcharliestudio')</em>은(는) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.</strong></p><ul class="list_indent2 mgt10"><p class="ls2">1. 홈페이지 회원가입 및 관리</p><p class="ls2">회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 서비스 부정이용 방지 목적으로 개인정보를 처리합니다.</p></br><p class="ls2">2. 재화 또는 서비스 제공</p><p class="ls2">서비스 제공, 맞춤서비스 제공을 목적으로 개인정보를 처리합니다.</p></br><p class="ls2">3. 마케팅 및 광고에의 활용</p><p class="ls2">신규 서비스(제품) 개발 및 맞춤 서비스 제공, 이벤트 및 광고성 정보 제공 및 참여기회 제공  등을 목적으로 개인정보를 처리합니다.</p></br></ul></br></br><p class='lh6 bs4'><strong>제2조(개인정보의 처리 및 보유 기간)</strong></br></br>① <em class="emphasis">< kimcharliestudio ></em>은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다.</br></br>② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.</p><ul class='list_indent2 mgt10'><li class='tt'>1.<홈페이지 회원가입 및 관리></li><li class='tt'><홈페이지 회원가입 및 관리>와 관련한 개인정보는 수집.이용에 관한 동의일로부터<3년>까지 위 이용목적을 위하여 보유.이용됩니다.</li><li>보유근거 : 이용약관/홈페이지 가입의사 확인 및 회원제 서비스 제공</li><li>관련법령 : </li><li>예외사유 : </li></ul></br></br><p class='lh6 bs4'><strong>제3조(개인정보의 제3자 제공)</strong></br></br> ① <em class="emphasis">< kimcharliestudio >은(는) 개인정보를 제1조(개인정보의 처리 목적)에서 명시한 범위 내에서만 처리하며, 정보주체의 동의, 법률의 특별한 규정 등 「개인정보 보호법」 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.</p><p class="sub_p mgt10">②  <span class="colorLightBlue">< kimcharliestudio ></span>은(는) 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.</p><ul class="list_indent2 mgt10"><li class="tt">1. <  ></li><li>개인정보를 제공받는 자 : </li><li>제공받는 자의 개인정보 이용목적 : </li><li>제공받는 자의 보유.이용기간: </li></ul>
+		 <div class="txtc mgt30">
+			<input onclick="javascript:window.close();" class="btnm2 btnGrey radius4" type="button" value="닫기" title="닫기">
+        </div>
+	</article>
+</section>
 
-
-제2조(개인정보의 처리 및 보유 기간)  ① < kimcharliestudio >은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다.  ② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.
-* 		1.<홈페이지 회원가입 및 관리>
-* 		<홈페이지 회원가입 및 관리>와 관련한 개인정보는 수집.이용에 관한 동의일로부터<3년>까지 위 이용목적을 위하여 보유.이용됩니다.
-* 		보유근거 : 이용약관/홈페이지 가입의사 확인 및 회원제 서비스 제공
-* 		관련법령 :
-* 		예외사유 :
-
-
-제3조(개인정보의 제3자 제공)  ① < kimcharliestudio >은(는) 개인정보를 제1조(개인정보의 처리 목적)에서 명시한 범위 내에서만 처리하며, 정보주체의 동의, 법률의 특별한 규정 등 「개인정보 보호법」 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.
-② < kimcharliestudio >은(는) 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.
-* 		1. < >
-* 		개인정보를 제공받는 자 :
-* 		제공받는 자의 개인정보 이용목적 :
-* 		제공받는 자의 보유.이용기간:
-
+</body>
+</html>
